--- a/about.html
+++ b/about.html
@@ -1,59 +1,137 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Data Science Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Swati's Interactive Portfolio - About</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .dark {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+        .light {
+            background-color: #f5f5f5;
+            color: #1f2937;
+        }
+        .card {
+            backdrop-filter: blur(8px);
+            background-color: rgba(255, 255, 255, 0.05);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+        .light .card {
+            background-color: rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(0, 0, 0, 0.1);
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        .btn {
+            background: linear-gradient(90deg, #6366f1, #8b5cf6);
+            border: none;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 999px;
+            font-weight: 600;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+        .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(139, 92, 246, 0.4);
+        }
+        .scroll-smooth {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
+<body class="dark scroll-smooth">
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<!-- Light/Dark Mode Toggle -->
+<div class="fixed top-4 right-4 z-50">
+    <button id="theme-toggle" class="p-2 rounded-full card focus:outline-none">
+        <svg id="moon-icon" class="w-6 h-6 text-yellow-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+        <svg id="sun-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+    </button>
+</div>
 
-    <main>
-        <section class="about">
-            <div class="about-container">
-                <div class="about-profile">
-                    <img src="" alt="Swati G Hegde">
-                    <h2>Swati G Hegde</h2>
-                    <p>Data Scientist | AI Enthusiast | Problem Solver</p>
-                </div>
-                <div class="about-content">
-                    <h1>About Me</h1>
-                    <p>I am a passionate AI/ML Practitioner with <strong>7+ years of diverse experience</strong> in working with cutting-edge technologies and solving real-world problems. 
-                    </p>
-                    <h2>⚙️ Technical Skills</h2>
-                    <ul>
-                        <li><strong>Programming Languages:</strong> Python, Powerscript, SQL, PL/SQL</li>
-                        <li><strong>Data Science Tools:</strong> Tensorflow, Keras, Pytorch, Scikit-learn, Numpy, Pandas, NLTK, Matplotlib</li>
-                        <li><strong>ML Techniques:</strong> Classification, Regression, Clustering, Association, Recommender Systems</li>
-                        <li><strong>DL Techniques:</strong> ANN, RNN, CNN, NLP, Transformer Models</li>
-                        <li><strong>Other Tools:</strong> FastAPI, Flask, Git, Tableau</li>
-                        <li><strong>Cloud Technologies:</strong> AWS - S3, EC2, SageMaker, Dynamo DB, RDS</li>
+<!-- Header -->
+<header class="container mx-auto px-4 py-8 flex flex-col sm:flex-row justify-between items-center text-center sm:text-left">
+    <a href="index.html" class="text-3xl font-bold transition-colors">Swati Hegde</a>
+    <nav class="mt-4 sm:mt-0">
+        <ul class="flex space-x-4 sm:space-x-8 text-lg">
+            <li><a href="index.html" class="transition-colors hover:text-purple-400">Home</a></li>
+            <li><a href="about.html" class="transition-colors hover:text-purple-400">About</a></li>
+            <li><a href="projects.html" class="transition-colors hover:text-purple-400">Projects</a></li>
+            <li><a href="contact.html" class="transition-colors hover:text-purple-400">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-                    </ul>
-                    <h2>🚀 What Drives Me</h2>
-                    <p>
-                        I thrive on the opportunity to work on challenging projects, bringing meaningful impact to businesses and society through data-driven insights. From predictive modeling to cloud-based AI solutions, I'm passionate about building scalable, reliable systems and continuously learning new technologies to stay ahead of the curve.
-                    </p>
-                </div>
+<main class="container mx-auto px-4 py-12">
+    <h1 class="text-4xl md:text-5xl font-bold text-center mb-12">About Me</h1>
+    
+    <div class="space-y-12">
+        <!-- About Me Section -->
+        <section class="card p-8 md:p-12 animate-fade-in-up">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500">About Me</h2>
+            <p class="text-gray-450 text-lg">I am a passionate AI/ML professional with 7+ years of experience in building data-driven solutions. I specialize in developing and optimizing ML models, creating impactful visualizations, and uncovering actionable insights.</p>
+        </section>
+
+        <!-- Technical Skills Section -->
+        <section class="card p-8 md:p-12 animate-fade-in-up delay-150">
+            <h2 class="text-2xl md:text-3xl font-bold mb-6 text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500">⚙️ Technical Skills</h2>
+            <div class="text-gray-450 text-lg">
+                <p class="mb-2"><strong>Programming Languages:</strong> Python, SQL, PL/SQL</p>
+                <p class="mb-2"><strong>Data Science Tools:</strong> Numpy, Pandas, NLTK, Matplotlib, Tensorflow, Keras, Scikit-learn</p>
+                <p class="mb-2"><strong>ML Techniques:</strong> Classification, Regression, Clustering, Association, Recommender Systems</p>
+                <p class="mb-2"><strong>DL Techniques:</strong> ANN, RNN, CNN, NLP, Transformer Models</p>
+                <p class="mb-2"><strong>Other Tools:</strong> FastAPI, Git, Tableau</p>
+                <p><strong>Cloud Technologies:</strong> AWS - S3, EC2, SageMaker, Dynamo DB, RDS</p>
             </div>
         </section>
-    </main>
+        
+        <!-- What Drives Me Section -->
+        <section class="card p-8 md:p-12 animate-fade-in-up delay-300">
+            <h2 class="text-2xl md:text-3xl font-bold mb-4 text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500">What Drives Me</h2>
+            <p class="text-gray-450 text-lg">I enjoy tackling challenging projects that create meaningful impact through data-driven insights. I am passionate about developing scalable, reliable AI and predictive modeling solutions. Continuously learning new technologies, I strive to stay ahead in the evolving data landscape.</p>
+        </section>
+    </div>
+</main>
 
-    <footer>
-        <p>© 2025 Swati G Hegde</p>
-    </footer>
+<!-- Footer -->
+<footer class="text-center py-8 text-gray-450">
+    <p>&copy; 2024 Swati Hegde. All Rights Reserved.</p>
+</footer>
+
+<script>
+    // Theme toggle functionality
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    const moonIcon = document.getElementById('moon-icon');
+    const sunIcon = document.getElementById('sun-icon');
+
+    themeToggle.addEventListener('click', () => {
+        if (body.classList.contains('dark')) {
+            body.classList.remove('dark');
+            body.classList.add('light');
+            moonIcon.classList.add('hidden');
+            sunIcon.classList.remove('hidden');
+        } else {
+            body.classList.remove('light');
+            body.classList.add('dark');
+            moonIcon.classList.remove('hidden');
+            sunIcon.classList.add('hidden');
+        }
+    });
+</script>
+
 </body>
-
 </html>
