--- a/contact.html
+++ b/contact.html
@@ -1,54 +1,135 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Data Science Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Swati's Interactive Portfolio - Contact</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .dark {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+        .light {
+            background-color: #f5f5f5;
+            color: #1f2937;
+        }
+        .card {
+            backdrop-filter: blur(8px);
+            background-color: rgba(255, 255, 255, 0.05);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+        .light .card {
+            background-color: rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(0, 0, 0, 0.1);
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        .btn {
+            background: linear-gradient(90deg, #6366f1, #8b5cf6);
+            border: none;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 999px;
+            font-weight: 600;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+        .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(139, 92, 246, 0.4);
+        }
+        .icon {
+            filter: grayscale(100%);
+            transition: filter 0.3s ease, transform 0.3s ease;
+        }
+        .icon:hover {
+            filter: grayscale(0%);
+            transform: scale(1.1);
+        }
+        .scroll-smooth {
+            scroll-behavior: smooth;
+        }
+    </style>
 </head>
+<body class="dark scroll-smooth min-h-screen flex flex-col">
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<!-- Light/Dark Mode Toggle -->
+<div class="fixed top-4 right-4 z-50">
+    <button id="theme-toggle" class="p-2 rounded-full card focus:outline-none">
+        <svg id="moon-icon" class="w-6 h-6 text-yellow-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+        <svg id="sun-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+    </button>
+</div>
 
-    <main>
-        <section class="contact">
-            <h1>Contact Me</h1>
-            <p>If you'd like to connect, discuss a project, or collaborate, feel free to drop me a message below!</p>
+<!-- Header -->
+<header class="container mx-auto px-4 py-8 flex flex-col sm:flex-row justify-between items-center text-center sm:text-left">
+    <a href="index.html" class="text-3xl font-bold transition-colors">Swati Hegde</a>
+    <nav class="mt-4 sm:mt-0">
+        <ul class="flex space-x-4 sm:space-x-8 text-lg">
+            <li><a href="index.html" class="transition-colors hover:text-purple-400">Home</a></li>
+            <li><a href="about.html" class="transition-colors hover:text-purple-400">About</a></li>
+            <li><a href="projects.html" class="transition-colors hover:text-purple-400">Projects</a></li>
+            <li><a href="contact.html" class="transition-colors hover:text-purple-400">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-            <form class="contact-form" action="#" method="POST">
-                <label for="name">Name</label>
-                <input type="text" id="name" name="name" placeholder="Your Name" required>
+<main class="container mx-auto px-4 py-12 flex-grow">
+    <!-- Contact Section -->
+    <section id="contact" class="py-24 text-center">
+        <h2 class="text-4xl md:text-5xl font-bold">Get In Touch</h2>
+        <p class="mt-4 text-xl md:text-2xl text-gray-450">
+            I’m always open to new opportunities, collaborations, or project discussions —<br> feel free to reach out and drop me a message.
+        </p>
+        <div class="mt-8 flex justify-center space-x-8">
+            <a href="mailto:hegdeswati95@gmail.com" class="icon">
+                <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V6c0-1.1-.9-2-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"></path></svg>
+            </a>
+            <a href="https://github.com/swatighegde" target="_blank" class="icon">
+                <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.6.111.82-.257.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61-.542-1.366-1.325-1.734-1.325-1.734-1.082-.742.083-.727.083-.727 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.49-1.341.108-.857.42-1.305.762-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.468-2.381 1.236-3.221-.124-.3-.536-1.52.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.046.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.656.241 2.876.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.61-2.801 5.625-5.476 5.922.43.37.81 1.05.81 2.112 0 1.526-.015 2.75-.015 3.12 0 .323.21.694.825.576 4.772-1.587 8.203-6.085 8.203-11.385C24 5.373 18.627 0 12 0z"></path></svg>
+            </a>
+            <a href="https://www.linkedin.com/in/swatihegde/" target="_blank" class="icon">
+                <svg class="w-10 h-10" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.769s.784-1.769 1.75-1.769 1.75.79 1.75 1.769-.783 1.769-1.75 1.769zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"></path></svg>
+            </a>
+        </div>
+    </section>
+</main>
 
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="Your Email" required>
+<!-- Footer -->
+<footer class="text-center py-8 text-gray-450 mt-auto">
+    <p>&copy; 2024 Swati Hegde. All Rights Reserved.</p>
+</footer>
 
-                <label for="message">Message</label>
-                <textarea id="message" name="message" rows="6" placeholder="Write your message here..." required></textarea>
+<script>
+    // Theme toggle functionality
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    const moonIcon = document.getElementById('moon-icon');
+    const sunIcon = document.getElementById('sun-icon');
 
-                <button type="submit" class="cta-button">Send Message</button>
-            </form>
+    themeToggle.addEventListener('click', () => {
+        if (body.classList.contains('dark')) {
+            body.classList.remove('dark');
+            body.classList.add('light');
+            moonIcon.classList.add('hidden');
+            sunIcon.classList.remove('hidden');
+        } else {
+            body.classList.remove('light');
+            body.classList.add('dark');
+            moonIcon.classList.remove('hidden');
+            sunIcon.classList.add('hidden');
+        }
+    });
+</script>
 
-            <div class="contact-info">
-                <h2>📧 Or reach me directly at:</h2>
-                <p><strong>Email:</strong> <a href="mailto:hegdeswati95@gmail.com">hegdeswati95@gmail.com</a></p>
-                <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/swatihegde/" target="\&quot;_blank\&quot;">linkedin.com/in/swatihegde</a></p>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>© 2025 Swati G Hegde | Data Science Portfolio</p>
-    </footer>
 </body>
-
 </html>
