--- a/index.html
+++ b/index.html
@@ -1,66 +1,227 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="en" class="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Swati G Hegde - Data Scientist Portfolio</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Swati's Interactive Portfolio - Home</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        body {
+            font-family: 'Inter', sans-serif;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        .dark {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+        .light {
+            background-color: #f5f5f5;
+            color: #1f2937;
+        }
+        .card {
+            backdrop-filter: blur(8px);
+            background-color: rgba(255, 255, 255, 0.05);
+            border-radius: 12px;
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            transition: all 0.3s ease;
+        }
+        .light .card {
+            background-color: rgba(0, 0, 0, 0.05);
+            border: 1px solid rgba(0, 0, 0, 0.1);
+        }
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        }
+        .btn {
+            background: linear-gradient(90deg, #6366f1, #8b5cf6);
+            border: none;
+            color: white;
+            padding: 12px 24px;
+            border-radius: 999px;
+            font-weight: 600;
+            transition: transform 0.2s ease, box-shadow 0.2s ease;
+        }
+        .btn:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 4px 15px rgba(139, 92, 246, 0.4);
+        }
+        .icon {
+            filter: grayscale(100%);
+            transition: filter 0.3s ease, transform 0.3s ease;
+        }
+        .icon:hover {
+            filter: grayscale(0%);
+            transform: scale(1.1);
+        }
+        .scroll-smooth {
+            scroll-behavior: smooth;
+        }
+        .typewriter-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 40px; /* Ensures consistent layout during typing */
+        }
+        .typewriter-text {
+            display: inline-block;
+            overflow: hidden;
+            white-space: nowrap;
+            border-right: 2px solid white;
+            animation: blink-caret .75s step-end infinite;
+        }
+
+        /* The typewriter cursor effect */
+        @keyframes blink-caret {
+            from, to { border-color: transparent }
+            50% { border-color: white; }
+        }
+    </style>
 </head>
+<body class="dark scroll-smooth">
 
-<body>
-    <header>
-        <nav>
-            <ul>
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+<!-- Light/Dark Mode Toggle -->
+<div class="fixed top-4 right-4 z-50">
+    <button id="theme-toggle" class="p-2 rounded-full card focus:outline-none">
+        <svg id="moon-icon" class="w-6 h-6 text-yellow-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+        <svg id="sun-icon" class="w-6 h-6 text-gray-800 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+    </button>
+</div>
 
-    <main>
-        <section class="hero">
-            <h1>Hi, I'm Swati G Hegde 👋</h1>
-            <p>A passionate Data Scientist with 7+ years of experience solving real-world problems through Data Science, AI, Big Data & Analytics.</p>
-            <div class="hero-actions">
-                <a href="projects.html" class="cta-btn">Explore My Projects</a>
-                <a href="" download class="cta-btn secondary-btn">Download Resume</a>
-            </div>
-        </section>
+<!-- Header -->
+<header class="container mx-auto px-4 py-8 flex flex-col sm:flex-row justify-between items-center text-center sm:text-left">
+    <a href="index.html" class="text-3xl font-bold transition-colors">Swati Hegde</a>
+    <nav class="mt-4 sm:mt-0">
+        <ul class="flex space-x-4 sm:space-x-8 text-lg">
+            <li><a href="index.html" class="transition-colors hover:text-purple-400">Home</a></li>
+            <li><a href="about.html" class="transition-colors hover:text-purple-400">About</a></li>
+            <li><a href="projects.html" class="transition-colors hover:text-purple-400">Projects</a></li>
+            <li><a href="contact.html" class="transition-colors hover:text-purple-400">Contact</a></li>
+        </ul>
+    </nav>
+</header>
 
-        <section class="featured-projects">
-            <h2>✨ Featured Projects</h2>
-            <div class="project-list">
-                <div class="project-card">
-                    <h3>CineMatch</h3>
-                    <p>Hybrid Movie Recommendation System using the MovieLens dataset.</p>
-                    <a href="projects.html">See Details</a>
-                </div>
-                <div class="project-card">
-                    <h3>RetailVision</h3>
-                    <p>Machine Learning Models predicting U.S. monthly retail sales.</p>
-                    <a href="projects.html">See Details</a>
-                </div>
-                <div class="project-card">
-                    <h3>FraudShield</h3>
-                    <p>An intelligent AI model to detect fraudulent transactions.</p>
-                    <a href="projects.html">See Details</a>
-                </div>
-            </div>
-        </section>
+<main class="container mx-auto px-4 py-12">
+    <!-- Hero Section -->
+    <section id="home" class="min-h-screen flex flex-col justify-center items-center text-center">
+        <h1 class="text-5xl md:text-7xl font-bold leading-tight animate-fade-in-down">
+            Hi, I'm <span class="text-transparent bg-clip-text bg-gradient-to-r from-indigo-500 to-purple-500">Swati Hegde</span>
+        </h1>
+        <div class="mt-4 text-xl md:text-2xl text-gray-450 typewriter-container">
+            <span id="typewriter-text" class="typewriter-text"></span>
+        </div>
+        <p class="mt-4 text-sm md:text-lg text-gray-450 max-w-2xl px-4 animate-fade-in-up">
+            A passionate Data Scientist with 7 years of experience transforming data into actionable insights.
+Skilled in AI/ML model development, data analysis, and interactive visualization.
+Driven to solve complex problems and create meaningful impact through data and analytics.
+        </p>
+        <div class="mt-8 flex space-x-4 animate-fade-in-up delay-300">
+            <a href="contact.html" class="btn">Get In Touch</a>
+            <a href="projects.html" class="btn bg-gray-600 hover:bg-gray-700">View My Work</a>
+        </div>
 
-        <section class="blogs">
-            <h2>✍️ My Blog</h2>
-            <p>Coming Soon! I'm excited to share my insights and learnings on data science, AI, and related topics. Stay tuned for updates!</p>
-            </section>
-    </main>
+        <!-- Social Icons -->
+        <div class="mt-8 flex space-x-6 items-center">
+            <a href="https://www.linkedin.com/in/swatihegde/" target="_blank" rel="noopener noreferrer" class="transition-all hover:scale-110">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" fill="currentColor" class="text-gray-400 hover:text-blue-500 transition-colors">
+                    <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.763s.784-1.763 1.75-1.763 1.75.79 1.75 1.763-.783 1.763-1.75 1.763zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.676 7 2.766v6.469z"/>
+                </svg>
+            </a>
+            <a href="https://github.com/swatighegde" target="_blank" rel="noopener noreferrer" class="transition-all hover:scale-110">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" fill="currentColor" class="text-gray-400 hover:text-white transition-colors">
+                    <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.809 1.305 3.49-1.05.108-.838.414-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.046.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                </svg>
+            </a>
+            <a href="mailto:hegdeswati95@gmail.com" target="_blank" rel="noopener noreferrer" class="transition-all hover:scale-110">
+                <svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 24 24" fill="currentColor" class="text-gray-400 hover:text-red-500 transition-colors">
+                    <path d="M12 12.713l-11.985-9.713h23.97l-11.985 9.713zm0 2.586l-12-9.721v12.208h24v-12.208l-12 9.721z"/>
+                </svg>
+            </a>
+            <!-- Kaggle Logo -->
+            <a href="https://www.kaggle.com/swatih/" target="_blank" rel="noopener noreferrer" class="transition-all hover:scale-110">
+                <svg width="25" height="25" viewBox="0 0 100 100" class="text-sky-500 hover:text-sky-400 transition-colors">
+                    <text x="50%" y="50%" text-anchor="middle" dominant-baseline="central" font-family="Inter, sans-serif" font-size="90" font-weight="bold" fill="currentColor">k</text>
+                </svg>
+            </a>
+            <!-- Medium Logo -->
+            <a href="https://medium.com/@hegdeswati95/" target="_blank" rel="noopener noreferrer" class="transition-all hover:scale-110">
+                <svg width="25" height="25" viewBox="0 0 1770 1000" fill="currentColor" class="text-gray-400 hover:text-white transition-colors">
+                    <circle cx="500" cy="500" r="500" />
+                    <ellipse ry="475" rx="250" cy="501" cx="1296" />
+                    <ellipse cx="1682" cy="502" rx="88" ry="424" />
+                </svg>
+            </a>
+        </div>
+    </section>
+</main>
 
-    <footer>
-        <p>© 2025 Swati G Hegde</p>
-    </footer>
+<!-- Footer -->
+<footer class="text-center py-8 text-gray-450">
+    <p>&copy; 2024 Swati Hegde. All Rights Reserved.</p>
+</footer>
+
+<script>
+    // Theme toggle functionality
+    const themeToggle = document.getElementById('theme-toggle');
+    const body = document.body;
+    const moonIcon = document.getElementById('moon-icon');
+    const sunIcon = document.getElementById('sun-icon');
+
+    themeToggle.addEventListener('click', () => {
+        if (body.classList.contains('dark')) {
+            body.classList.remove('dark');
+            body.classList.add('light');
+            moonIcon.classList.add('hidden');
+            sunIcon.classList.remove('hidden');
+        } else {
+            body.classList.remove('light');
+            body.classList.add('dark');
+            moonIcon.classList.remove('hidden');
+            sunIcon.classList.add('hidden');
+        }
+    });
+
+    // Typewriter effect functionality
+    const sentences = [
+        "I’m a Data Scientist.",
+        "I build intelligence from data with AI & ML.",
+        "I love to code.",
+        "I solve problems."
+    ];
+    let sentenceIndex = 0;
+    const typewriterTextElement = document.getElementById('typewriter-text');
+    
+    function type() {
+        const currentSentence = sentences[sentenceIndex];
+        let charIndex = 0;
+        
+        function typeChar() {
+            if (charIndex < currentSentence.length) {
+                typewriterTextElement.textContent += currentSentence.charAt(charIndex);
+                charIndex++;
+                setTimeout(typeChar, 50);
+            } else {
+                setTimeout(erase, 1000); 
+            }
+        }
+        typeChar();
+    }
+
+    function erase() {
+        if (typewriterTextElement.textContent.length > 0) {
+            typewriterTextElement.textContent = typewriterTextElement.textContent.slice(0, -1);
+            setTimeout(erase, 25);
+        } else {
+            sentenceIndex = (sentenceIndex + 1) % sentences.length;
+            setTimeout(type, 100); 
+        }
+    }
+
+    window.onload = function() {
+        type();
+    };
+</script>
 
 </body>
-
 </html>
